[package]
name = "vector-map"
version = "0.3.0"
keywords = ["map", "structures", "vec-map"]
authors = ["Pierre Avital <pierre.avital@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
description = "VecMap<K, V>: the Map API for Vec<(K, V)>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]