[package]
name = "vector-map"
version = "1.0.0"
keywords = ["map", "structures", "vec-map"]
authors = ["Pierre Avital <pierre.avital@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
description = "VecMap<K, V>: the Map API for Vec<(K, V)>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
nightly = []
serde_impl = ["serde", "serde_test"]
enable_contracts = []
default = ["contracts/disable_contracts"]

[dependencies]
contracts = ""
rand = ""
serde = { version = "1.0", optional = true }
serde_test = { version = "1.0", optional = true }

[dev-dependencies]
linear-map = ""

[lib]
test = false
bench = false