[package]
name = "vector-map"
version = "1.0.2"
keywords = ["map", "structures", "vec-map"]
authors = ["Pierre Avital <pierre.avital@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
description = "VecMap<K, V>: a Linear Search with Map API"
repository = "https://github.com/p-avital/vec-map-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
nightly = []
serde_impl = ["dep:serde"]
enable_contracts = []

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
linear-map = "1.2"
rand = "0.9"

[lib]
test = false
bench = false
